Add basic test for lunr.trim

--- a/test/index.html
+++ b/test/index.html
@@ -30,6 +30,7 @@
 
     <!-- Tests -->
     <script src="/test/tokenizer_test.js"></script>
+    <script src="/test/trim_test.js"></script>
     <script src="/test/pipeline_test.js"></script>
     <script src="/test/vector_test.js"></script>
     <script src="/test/sorted_set_test.js"></script>
